sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  
{
	
	var indic :Boolean = false;
	var i:Int;
	var j:Int = i+1;
	
	do
	{
		indic=false;
		length :Int = getNombreValeurs();
		
		for(i<-0 to length-2)
		{
			if(plusPetit(i,j))
			{
				echange(i,j);
				indic= true;
			}
		}
		
		
	}
	while(indic==true)
	
}
